[gd_scene load_steps=15 format=3 uid="uid://b3lr2ghlaehoi"]

[ext_resource type="Script" path="res://bad_guy/patroling_baddie.gd" id="1_v780l"]
[ext_resource type="Script" path="res://bad_guy/ScoutingVision.gd" id="2_a0nmh"]
[ext_resource type="Texture2D" uid="uid://bq7dj8b0pvub0" path="res://bad_guy/fox.png" id="3_asg06"]

[sub_resource type="CircleShape2D" id="CircleShape2D_obcqa"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_42g0g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ud0hy"]
atlas = ExtResource("3_asg06")
region = Rect2(1, 42, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxs85"]
atlas = ExtResource("3_asg06")
region = Rect2(0, 10, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_or0er"]
atlas = ExtResource("3_asg06")
region = Rect2(32, 10, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vynro"]
atlas = ExtResource("3_asg06")
region = Rect2(64, 10, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijj2a"]
atlas = ExtResource("3_asg06")
region = Rect2(96, 10, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ol8c"]
atlas = ExtResource("3_asg06")
region = Rect2(128, 10, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x877i"]
atlas = ExtResource("3_asg06")
region = Rect2(160, 10, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdem4"]
atlas = ExtResource("3_asg06")
region = Rect2(192, 10, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6v3v4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud0hy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxs85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or0er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vynro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijj2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ol8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x877i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdem4")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="PatrolingBadGuy" type="CharacterBody2D"]
editor_description = "You need to assign a PathFollow2D node to the script for this to work.. OR ELSE!"
collision_layer = 4
script = ExtResource("1_v780l")
DEBUG = true

[node name="AlertLabel" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_top = -27.0
offset_right = 21.0
offset_bottom = -1.0
text = "!"

[node name="VisionRaycast" type="RayCast2D" parent="."]
editor_description = "Used for the bad guy's vision. Scans back and forth in the direction it's facing."
target_position = Vector2(0, 100)
collision_mask = 2
script = ExtResource("2_a0nmh")
LAZY_SCAN_SPEED = 6.283
ALERT_SCAN_SPEED = 12.566
fov_in_degrees = 200.0

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_obcqa")

[node name="HitBox" type="Area2D" parent="."]
editor_description = "Used to detect collisions with player  \"hurt boxes\".
Causes damage to player on collision."
collision_layer = 4
collision_mask = 0

[node name="HitBoxCollider" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 1)
scale = Vector2(0.9, 0.6)
shape = SubResource("CircleShape2D_42g0g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6v3v4")
animation = &"idle"

[node name="AlertnessTimer" type="Timer" parent="."]
one_shot = true

[connection signal="scout_alert" from="VisionRaycast" to="." method="_on_vision_raycast_scout_alert"]
[connection signal="timeout" from="AlertnessTimer" to="." method="_on_alertness_timer_timeout"]
